# local-marketplace

./: .env.example  .env.vercel  .env.vercel.prod  .gitignore  .mcp.json  CLAUDE.md  Dockerfile  Makefile  README.md  SPEC.md  alembic.ini  docker-compose.yml  local_marketplace.db  pyproject.toml  requirements.txt  vercel.json
.claude/skills/dry-run-spec/: SKILL.md
.claude/skills/review-spec/: SKILL.md
.claude/skills/spec-create/: SKILL.md  scaffold_feature.py
.claude/skills/switch/: SKILL.md  switch_feature.py
api/: index.py
backend/: local_marketplace.db
backend/agent/: __init__.py  cli.py  memory.py  orchestrator.py  planner.py  schemas.py
backend/agent/config/: agent.yaml
backend/agent/io/: __init__.py  asr.py  cli.py  ocr.py
backend/agent/prompts/: __init__.py  system_customer.txt  system_router.txt  system_vendor.txt
backend/agent/tests/: conftest.py  test_io_asr.py  test_io_ocr.py  test_orchestrator.py  test_planner_circuit.py  test_schemas.py  test_tools_customer.py  test_tools_vendor.py
backend/agent/tools/: __init__.py  _store.py  base.py  customer_tools.py  nlp_tools.py  shared_tools.py  vendor_tools.py
backend/agent/utils/: config.py
backend/app/: main.py
backend/app/agent_router/: __init__.py  _auth.py  api.py  chat_adapter.py  entities.py  intents.py  projection.py  route.py  sbert.py  search_adapter.py
backend/app/catalog/: enums.py  models.py  parser.py  seed_data.py
backend/app/core/: config.py
backend/app/db/: session.py
backend/app/models/: __init__.py  category.py  models.py  order.py  order_item.py  otp.py  product.py  refresh_token.py  subcategory.py  user.py  vendor.py
backend/app/schemas/: __init__.py  auth.py  order.py  product.py  search.py
backend/app/security/: __init__.py  password.py
backend/app/services/: __init__.py  auth_service.py  jwt_service.py  order_service.py  otp_service.py  product_service.py  rate_limit.py  search_service.py
backend/db/: Dockerfile
backend/db/init/: 01-extensions.sql
backend/db/migrations/: env.py
backend/migrations/: env.py
backend/migrations/versions/: 0001_create_auth_tables.py  (+4 more)
backend/tests/: conftest.py  test_agent_route_endpoint.py  test_agent_router.py  test_auth_login.py  test_auth_logout.py  test_auth_me.py  test_auth_refresh.py  test_auth_register.py  test_auth_service.py  test_catalog_models.py  test_chat_router.py  test_entities.py  test_health.py  test_intent_classifier.py  test_jwt_service.py  test_orders_concurrency.py  test_orders_route.py  test_otp_service.py  test_password.py  test_product_parser.py  test_products_delete_by_description.py  test_products_from_description.py  test_rate_limit.py  test_sbert_loader.py  test_search.py  test_search_route.py  test_vendor_orders_route.py
docs/: architecture.md
frontend/: .env.example  .gitignore  API_INTEGRATION_GUIDE.md  COMPONENT_DOCUMENTATION.md  Dockerfile  FRONTEND_DOCUMENTATION.md  README.md  ROUTING_DOCUMENTATION.md  TEST_CASES.md  UI_DESIGN.md  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  vite.config.js
frontend/SCREENSHOTS/: README.md
frontend/src/: App.jsx  index.css
scripts/: download_whisper_base_en.sh
specs/: constitution.md
specs/000-app-scaffold/: conversation-history.md  plan.md  prompts.md
specs/001-db-schema/: conversation-history.md  plan.md  prompts.md  spec.md
specs/002-agent/: agent-spec.md  conversation-history.md  input-spec.md  plan.md  prompts.md
specs/002-frontend/: 002-frontend-SPEC.md  CLAUDE.md  conversation-history.md  frontenddraft.md  frontendupdate2.md  plan.md  prompts.md  spec.md
specs/003-vendor-customer-auth/: conversation-history.md  plan.md  prompts.md  spec.md
specs/004-frontend/: conversation-history.md  plan.md  prompts.md  spec.md
specs/005-catalog/: conversation-history.md  plan.md  prompts.md  spec.md
specs/006-vendor-product-management/: conversation-history.md  plan.md  prompts.md  spec.md
specs/007-add-cart_final-order/: spec.md
specs/007-deployment/: conversation-history.md  plan.md  prompts.md  spec.md
specs/008-SearchBE-API/: spec.md
specs/008-sbert-intent-router/: conversation-history.md  plan.md  prompts.md  spec.md
specs/009-proximity/: conversation-history.md  plan.md  prompts.md  spec.md
(+76 files in other folders)
