[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "local-marketplace"
version = "0.1.0"
description = "Conversational AI marketplace agent"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.5",
    "uvicorn[standard]==0.32.1",
    "pydantic==2.10.4",
    "pydantic-settings==2.6.1",
    "email-validator==2.2.0",
    "sqlalchemy==2.0.36",
    "asyncpg>=0.29",
    "alembic==1.14.0",
    "pgvector>=0.2.0",
    "geoalchemy2==0.16.0",
    "psycopg[binary]==3.2.10",
    "python-jose[cryptography]==3.3.0",
    "passlib[bcrypt]==1.7.4",
    "shapely==2.0.4",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.4",
    "httpx==0.28.1",
    "ruff==0.8.4",
    "pytest-asyncio>=0.23",
]
# Feature 002 (conversational agent). Heavy native deps (faster-whisper,
# pillow, pytesseract) live here so the `dev` extra stays light for users
# who only care about feature 000.
agent = [
    "httpx==0.28.1",
    "pydantic==2.10.4",
    "pyyaml==6.0.2",
    "python-dotenv==1.0.1",
    "redis==5.2.1",
    "eval_type_backport==0.2.0",
    "faster-whisper==1.0.3",
    "pillow==11.0.0",
    "pytesseract==0.3.13",
]

[tool.setuptools.packages.find]
include = ["backend*"]

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = [
    ".venv",
    "backend/agent/tests/fixtures",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["backend/tests", "backend/agent/tests"]
asyncio_mode = "auto"
# Default run excludes slow tests (need real Whisper weights / tesseract binary).
# Opt in with `pytest -m slow` once `bash scripts/download_whisper_base_en.sh`
# has been run and `tesseract` is on PATH.
markers = [
    "slow: real-model / heavy integration tests; opt-in via `pytest -m slow`.",
]
addopts = "-ra -m 'not slow'"
